--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,5 +16,5 @@ panic = "abort"
 panic = "abort"
 
 [package.metadata.bootimage]
-test-args = ["-serial", "stdio", "-device", "isa-debug-exit,iobase=0xf4,iosize=0x04"]
+test-args = ["-nographic", "-device", "isa-debug-exit,iobase=0xf4,iosize=0x04"]
 test-success-exit-code = 253
