--- a/.github/workflows/kunit.yml
+++ b/.github/workflows/kunit.yml
@@ -21,7 +21,7 @@ jobs:
     - uses: actions/checkout@v2
     - name: Cargo setup
       run: |
-          source $HOME/.cargo/env/
+          source /root/.cargo/env/
     - name: Compile and run unit tests
       run: |
           cargo xtest
