--- a/.github/workflows/kunit.yml
+++ b/.github/workflows/kunit.yml
@@ -20,9 +20,10 @@ jobs:
     steps:
     - uses: actions/checkout@v2
 
-    - name: Set-up Cargo and packages
+    - name: Set-up environment
       run: |
           cargo install cargo-xbuild
+          rustup default nightly
 
     - name: Compile and run unit tests
       run: |
