--- a/.github/workflows/kunit.yml
+++ b/.github/workflows/kunit.yml
@@ -21,4 +21,5 @@ jobs:
     - uses: actions/checkout@v2
     - name: Compile and run unit tests
       run: |
+          rustup default nightly
           cargo xtest
