riscv: Port working

--- a/.cargo/config
+++ b/.cargo/config
@@ -1,5 +1,6 @@
 [build]
-target = "x86_64_goose.json"
+target = "riscv64gc-unknown-none-elf"
+rustflags = ["-C", "link-args=-Tsrc/link.lds"]
 
-[target.'cfg(target_os = "none")']
-runner = "bootimage runner"
+[unstable]
+build-std = ["core", "compiler_builtins"]
