--- a/.cargo/config
+++ b/.cargo/config
@@ -1,6 +1,8 @@
-[build]
-target = "riscv64gc-unknown-none-elf"
-rustflags = ["-C", "link-args=-Tsrc/link.lds"]
+[target.'cfg(target_arch = "riscv64")']
+rustflags = ["-C", "link-args=-Tsrc/arch/riscv64/link.lds"]
+
+[target.'cfg(target_arch = "x86_64")']
+rustflags = []
 
 [unstable]
 build-std = ["core", "compiler_builtins"]
