--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,6 +6,13 @@ edition = "2018"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
+[dependencies]
+cfg-if = "0.1.10"
+
+[target.'cfg(target_arch = "x86_64")'.dependencies]
+rlibc = "1.0.0"
+bootloader = "0.9.8"
+
 [profile.dev]
 panic = "abort"
 
