--- a/.cargo/config
+++ b/.cargo/config
@@ -6,3 +6,8 @@ build-std = ["core", "compiler_builtins"]
 
 [target.'cfg(target_arch = "x86_64")']
 runner = "bootimage runner"
+
+[target.'cfg(target_arch = "riscv64")']
+rustflags = ["-C", "link-args=-Tsrc/arch/riscv64/link.lds"]
+runner = 'qemu-system-riscv64 -M virt -bios fw_jump.bin -nographic -monitor none -serial stdio -kernel '
+
