--- a/.github/workflows/kunit.yml
+++ b/.github/workflows/kunit.yml
@@ -13,6 +13,9 @@ on:
 jobs:
   build:
     runs-on: ubuntu-20.04
+    strategy:
+      matrix:
+        target: [riscv64gc-unknown-none-elf, x86_64-unknown-linux-gnu]
 
     steps:
       - uses: actions/checkout@v2
@@ -22,12 +25,14 @@ jobs:
         with:
           toolchain: nightly
           override: true
+          target: ${{ matrix.target }}
           components: rust-src, llvm-tools-preview
 
       - name: Install qemu
         run: sudo apt install qemu-kvm
 
       - name: Cargo install bootimage
+        if: matrix.target == 'x86_64-unknown-linux-gnu'
         uses: actions-rs/cargo@v1
         with:
           command: install
@@ -37,13 +42,16 @@ jobs:
         uses: actions-rs/cargo@v1
         with:
           command: check
+          args: --target ${{ matrix.target }}
 
       - name: Cargo build
         uses: actions-rs/cargo@v1
         with:
           command: build
+          args: --target ${{ matrix.target }}
 
       - name: Cargo test
         uses: actions-rs/cargo@v1
         with:
           command: test
+          args: --target ${{ matrix.target }} --verbose
