--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,7 +7,7 @@ edition = "2018"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-qemu-exit = { git = "https://github.com/andre-richter/qemu-exit.git" }
+qemu-exit = "1.0.0"
 cfg-if = "0.1.10"
 
 [target.'cfg(target_arch = "x86_64")'.dependencies]
