--- a/.github/workflows/kunit.yml
+++ b/.github/workflows/kunit.yml
@@ -29,7 +29,7 @@ jobs:
           components: rust-src, llvm-tools-preview
 
       - name: Install qemu
-        run: sudo apt install qemu-kvm
+        run: sudo apt install qemu-system
 
       - name: Cargo install bootimage
         if: matrix.target == 'x86_64-unknown-linux-gnu'
