ci: Use custom x86_64_goose target

--- a/.github/workflows/kunit.yml
+++ b/.github/workflows/kunit.yml
@@ -15,24 +15,27 @@ jobs:
     runs-on: ubuntu-20.04
     strategy:
       matrix:
-        target: [riscv64gc-unknown-none-elf, x86_64-unknown-linux-gnu]
+        target: [riscv64gc-unknown-none-elf, x86_64_goose.json]
 
     steps:
       - uses: actions/checkout@v2
 
-      - name: Rust setup
+      - name: Rustup setup
         uses: actions-rs/toolchain@v1
         with:
           toolchain: nightly
           override: true
-          target: ${{ matrix.target }}
           components: rust-src, llvm-tools-preview
+
+      - name: Rustup extra target
+        if: matrix.target != 'x86_64_goose.json'
+        run: rustup target add ${{ matrix.target }}
 
       - name: Install qemu
         run: sudo apt install qemu-system
 
       - name: Cargo install bootimage
-        if: matrix.target == 'x86_64-unknown-linux-gnu'
+        if: matrix.target == 'x86_64_goose.json'
         uses: actions-rs/cargo@v1
         with:
           command: install
