--- a/.cargo/config
+++ b/.cargo/config
@@ -3,6 +3,7 @@ target = "x86_64_goose.json"
 
 [unstable]
 build-std = ["core", "compiler_builtins"]
+build-std-features = ["compiler-builtins-mem"]
 
 [target.'cfg(target_arch = "x86_64")']
 runner = "bootimage runner"
