--- a/.github/workflows/kunit.yml
+++ b/.github/workflows/kunit.yml
@@ -32,7 +32,9 @@ jobs:
         run: rustup target add ${{ matrix.target }}
 
       - name: Install qemu
-        run: sudo apt install qemu-system
+        run: |
+          sudo apt update
+          sudo apt install qemu-system
 
       - name: Cargo install bootimage
         if: matrix.target == 'x86_64_goose.json'
