--- a/.cargo/config
+++ b/.cargo/config
@@ -5,6 +5,7 @@ target = "x86_64_goose.json"
 build-std = ["core", "compiler_builtins"]
 
 [target.'cfg(target_arch = "x86_64")']
+rustflags = ["-C", "link-args=-Tsrc/arch/x86_64/link.lds"]
 runner = "bootimage runner"
 
 [target.'cfg(target_arch = "riscv64")']
