ci: Fix ci test flag

--- a/.github/workflows/kunit.yml
+++ b/.github/workflows/kunit.yml
@@ -49,4 +49,4 @@ jobs:
         uses: actions-rs/cargo@v1
         with:
           command: test
-          args: --target ${{ matrix.target }} --target release --verbose
+          args: --target ${{ matrix.target }} --release --verbose
