--- a/.cargo/config
+++ b/.cargo/config
@@ -7,5 +7,6 @@ build-std-features = ["compiler-builtins-mem"]
 
 [target.'cfg(target_arch = "riscv64")']
 rustflags = ["-C", "link-args=-Tsrc/arch/riscv64/link.lds"]
-runner = 'qemu-system-riscv64 -M virt -bios tools/fw_jump.elf -nographic -monitor none -serial stdio -kernel '
+# If nothing boots, raise -m value
+runner = 'qemu-system-riscv64 -M virt -m 35M -bios tools/fw_jump.elf -serial stdio -nographic -monitor none -kernel '
 
