--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,7 +7,9 @@ edition = "2018"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-num_enum = {version = "0.5.1", default-features = false} 
+num_enum = {version = "0.5.1", default-features = false}
+spin = "0.7.0"
+lazy_static = {version = "1.4.0", features = ["spin_no_std"]}
 qemu-exit = "1.0.0"
 cfg-if = "1.0.0"
 riscv = "0.6.0"
