allocator: Add linked list allocator

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,6 +13,7 @@ lazy_static = {version = "1.4.0", features = ["spin_no_std"]}
 qemu-exit = "1.0.0"
 cfg-if = "1.0.0"
 riscv = "0.6.0"
+linked_list_allocator = "0.8.6"
 
 # [profile.dev]
 # panic = "abort"
