--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,22 +1,16 @@
 [package]
 name = "goose"
 version = "0.1.0"
-authors = ["cohenarthur <arthur.cohen@epita.fr>"]
+authors = ["cohenarthur <arthur.cohen@epita.fr>", "Esteban \"Skallwar\" Blanc <estblcsk@gmail.com>"]
 edition = "2018"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-num_enum = {version = "0.5.1", default-features = false}
-spin = "0.7.0"
-lazy_static = {version = "1.4.0", features = ["spin_no_std"]}
-qemu-exit = "1.0.0"
-cfg-if = "1.0.0"
-riscv = "0.6.0"
-linked_list_allocator = "0.8.6"
+panic-halt = "^0.2"
 
-# [profile.dev]
-# panic = "abort"
+[profile.dev]
+panic = "abort"
 #
-# [profile.release]
-# panic = "abort"
+[profile.release]
+panic = "abort"
