--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,8 +9,12 @@ edition = "2018"
 [dependencies]
 panic-halt = "^0.2"
 
+[build-dependencies]
+serde = { version = "^1.0", features = ["derive"] }
+toml = "^0.5"
+
 [profile.dev]
 panic = "abort"
-#
+
 [profile.release]
 panic = "abort"
