--- a/boards/riscv64_qemuvirt.conf
+++ b/boards/riscv64_qemuvirt.conf
@@ -1,3 +1,6 @@
 [build]
 target = "riscv64gc-unknown-none-elf"
+
+[target.riscv64gc-unknown-none-elf]
 rustflags = ["-C", "link-args=-Tboards/riscv64_qemuvirt.ld"]
+runner = 'qemu-system-riscv64 -M virt -nographic -kernel '
