arm32: Add base for ARM32 platforms

--- a/boards/arm32_stm32-nucleo-f401re.conf
+++ b/boards/arm32_stm32-nucleo-f401re.conf
@@ -2,5 +2,7 @@
 target = "thumbv7em-none-eabihf"
 
 [target.thumbv7em-none-eabihf]
-rustflags = ["-C", "link-args=-Tboards/arm32_stm32-nucleo-f401re.ld"]
-runner = "probe-run --chip stm32f401re"
+rustflags = [
+    "-C", "link-args=-Tlink.x",
+]
+runner = "cargo flash --chip stm32f401re --elf"
