--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,6 +10,10 @@ edition = "2018"
 panic-halt = "^0.2"
 cfg-if = "^1.0"
 
+[target.thumbv7em-none-eabihf.dependencies]
+cortex-m = "0.7"
+cortex-m-rt = { version = "0.7", default-features = false }
+
 [profile.dev]
 panic = "abort"
 
