--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,8 +7,8 @@ edition = "2018"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-panic-halt = "^0.2"
 cfg-if = "^1.0"
+qemu-exit = "2.0"
 
 [target.thumbv7em-none-eabihf.dependencies]
 cortex-m = "0.7"
