--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,6 +9,7 @@ edition = "2018"
 [dependencies]
 cfg-if = "^1.0"
 modular-bitfield = "0.11"
+bitflags = "1.3.2"
 
 [dev-dependencies]
 qemu-exit = "2.0"
