--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,9 +10,11 @@ edition = "2018"
 cfg-if = "^1.0"
 modular-bitfield = "0.11"
 bitflags = "1.3.2"
+dtb = "0.2"
 
 [dev-dependencies]
 qemu-exit = "2.0"
+# fdt-rs = { version = "0.4", default-features = false }
 
 [target.thumbv7em-none-eabihf.dependencies]
 cortex-m = "0.7"
