--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,6 +10,7 @@ edition = "2021"
 cfg-if = "^1.0"
 modular-bitfield = "0.11"
 bitflags = "1.3.2"
+fdt = "0.1.3"
 
 [dev-dependencies]
 qemu-exit = "2.0"
