--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,6 +12,7 @@ modular-bitfield = "0.11"
 bitflags = "1.3"
 fdt = "0.1"
 spin = "0.9"
+goblin = { version = "0.4", default-features = false, features = ["elf64"] }
 
 [dev-dependencies]
 qemu-exit = "3.0"
