--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,13 +7,14 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-cfg-if = "^1.0"
+cfg-if = "1.0"
 modular-bitfield = "0.11"
-bitflags = "1.3.2"
-fdt = "0.1.3"
+bitflags = "1.3"
+fdt = "0.1"
+spin = "0.9"
 
 [dev-dependencies]
-qemu-exit = "2.0"
+qemu-exit = "3.0"
 
 [target.thumbv7em-none-eabihf.dependencies]
 cortex-m = "0.7"
