--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,6 +8,7 @@ edition = "2021"
 
 [dependencies]
 cfg-if = "1.0"
+static_assertions = "1.1.0"
 modular-bitfield = "0.11"
 bitflags = "1.3"
 fdt = "0.1"
