refactor: Remove gen_cargo.sh in favor of a build.rs
Also, since qemu virt platforms are similar, make the linkerscript
common.

--- a/.github/workflows/doc.yml
+++ b/.github/workflows/doc.yml
@@ -16,8 +16,5 @@ jobs:
             components: clippy
             override: true
 
-      - name: Run gen_cargo.sh
-        run: ./gen_cargo.sh riscv64_qemuvirt
-
       - name: Build doc
-        run: cargo doc
+        run: cargo doc --target riscv64gc-unknown-none-elf
