--- a/.github/workflows/clippy.yml
+++ b/.github/workflows/clippy.yml
@@ -16,11 +16,8 @@ jobs:
             components: clippy
             override: true
 
-      - name: Run gen_cargo.sh
-        run: ./gen_cargo.sh riscv64_qemuvirt
-
       - uses: actions-rs/clippy-check@v1
         with:
           token: ${{ secrets.GITHUB_TOKEN }}
-          args: --all-features
+          args: --all-features --target riscv64gc-unknown-none-elf
 
