--- a/.github/workflows/doc.yml
+++ b/.github/workflows/doc.yml
@@ -3,18 +3,38 @@ name: Doc
 on: pull_request
 
 jobs:
-  clippy:
+  doc_riscv64:
     runs-on: ubuntu-latest
+    env:
+      TARGET: riscv64gc-unknown-none-elf
+      BIN: riscv64_qemuvirt
     steps:
       - uses: actions/checkout@v2
 
-      # For now goOSe is RISC-V only
       - uses: actions-rs/toolchain@v1
         with:
             toolchain: nightly
-            target: riscv64gc-unknown-none-elf
+            target: ${{ env.TARGET }}
             components: clippy
             override: true
 
       - name: Build doc
-        run: cargo doc --target riscv64gc-unknown-none-elf
+        run: cargo doc --target ${{ env.TARGET }} --bin ${{ env.BIN }}
+
+  doc_aarch64:
+    runs-on: ubuntu-latest
+    env:
+      TARGET: aarch64-unknown-none
+      BIN: aarch64_qemuvirt
+    steps:
+      - uses: actions/checkout@v2
+
+      - uses: actions-rs/toolchain@v1
+        with:
+            toolchain: nightly
+            target: ${{ env.TARGET }}
+            components: clippy
+            override: true
+
+      - name: Build doc
+        run: cargo doc --target ${{ env.TARGET }} --bin ${{ env.BIN }}
