ci: Add cargo test

--- a/kernel/fixtures/Makefile
+++ b/kernel/fixtures/Makefile
@@ -1,4 +1,3 @@
-TARGET = $(shell awk '/target =/ { print substr($$3, 2, length($$3) - 2) }' ../.cargo/config)
 CC := clang
 
 ASFLAGS += -Wall -Wextra -nostdlib -nostartfiles -static -mno-relax
@@ -8,10 +7,12 @@ EXEC = small
 
 .PHONY = all clean
 
-all: $(TARGET) $(EXEC)
+all:
+	echo 'You forgot to sepcify your rust target'
+	exit 1
 
-riscv64gc-unknown-none-elf:
-	$(eval ASFLAGS+=--target=riscv64-unknown-none-elf-riscv64gc)
+riscv64gc-unknown-none-elf: ASFLAGS+=--target=riscv64-unknown-none-elf-riscv64gc
+riscv64gc-unknown-none-elf: $(EXEC)
 
 clean:
 	rm -f *.o
