--- a/kernel/Cargo.toml
+++ b/kernel/Cargo.toml
@@ -7,13 +7,13 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-cfg-if = "1.0"
+cfg-if = "1.0.0"
 static_assertions = "1.1.0"
-modular-bitfield = "0.11"
-bitflags = "1.3"
-fdt = "0.1"
-spin = "0.9"
 goblin = { version = "0.4", default-features = false, features = ["elf64"] }
+modular-bitfield = "0.11.2"
+bitflags = "1.3.2"
+fdt = "0.1.3"
+spin = "0.9.4"
 drivers = { path = "../drivers" }
 
 [dev-dependencies]
@@ -28,7 +28,7 @@ cortex-m = "0.7"
 cortex-m-rt = { version = "0.7", default-features = false }
 
 [target.aarch64-unknown-none.dependencies]
-tock-registers = "0.7.x"
+tock-registers = "0.7.0"
 cortex-a = "7.4.0"
 
 [profile.dev]
