--- a/.cargo/config
+++ b/.cargo/config
@@ -1,2 +1,5 @@
 [target.riscv64gc-unknown-none-elf]
 runner = 'qemu-system-riscv64 -M virt -nographic -kernel '
+
+[target.aarch64-unknown-none]
+runner = 'qemu-system-aarch64 -M virt,gic-version=2 -cpu cortex-a53 -nographic -kernel target/aarch64-unknown-none/debug/aarch64_qemuvirt -m 4G'
