--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -25,3 +25,26 @@ jobs:
 
       - name: cargo test
         run: cargo test --release --target ${{ env.TARGET }} --bin ${{ env.BIN }}
+
+  tests_aarch64:
+    runs-on: ubuntu-22.04
+    env:
+      TARGET: aarch64-unknown-none
+      BIN: aarch64_qemuvirt
+    steps:
+      - uses: actions/checkout@v2
+
+      - uses: actions-rs/toolchain@v1
+        with:
+            toolchain: nightly
+            target: ${{ env.TARGET }}
+            override: true
+
+      - name: Install qemu
+        run: sudo apt-get update && sudo apt-get install qemu-system-arm
+
+      - name: Build fixtures
+        run: make -C kernel/fixtures $TARGET
+
+      - name: cargo test
+        run: cargo test --release --target ${{ env.TARGET }} --bin ${{ env.BIN }}
