--- a/kernel/fixtures/Makefile
+++ b/kernel/fixtures/Makefile
@@ -14,6 +14,9 @@ all:
 riscv64gc-unknown-none-elf: ASFLAGS+=--target=riscv64-unknown-none-elf-riscv64gc
 riscv64gc-unknown-none-elf: $(EXEC)
 
+aarch64-unknown-none: ASFLAGS+=--target=aarch64-unknown-none-elf
+aarch64-unknown-none: $(EXEC)
+
 clean:
 	rm -f *.o
 	rm -f $(EXEC)
