--- a/kernel/Cargo.toml
+++ b/kernel/Cargo.toml
@@ -9,6 +9,7 @@ edition = "2021"
 [dependencies]
 cfg-if = "1.0"
 static_assertions = "1.1.0"
+once_cell = { version = "1.16.0", default-features = false }
 modular-bitfield = "0.11"
 bitflags = "1.3"
 fdt = "0.1"
