--- a/aarch64_qemuvirt/Cargo.toml
+++ b/aarch64_qemuvirt/Cargo.toml
@@ -6,6 +6,6 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-kernel = { path = "../kernel", features = ["aarch64", "aarch64_pgt48oa"] }
+kernel = { path = "../kernel", features = ["aarch64_pgt48oa"] }
 
 cortex-a = "7.4.0"
