--- a/kernel/Cargo.toml
+++ b/kernel/Cargo.toml
@@ -7,8 +7,6 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-utils = { path = "../utils" }
-drivers = { path = "../drivers" }
 cfg-if = "1.0"
 static_assertions = "1.1.0"
 once_cell = { version = "1.17.0", default-features = false }
@@ -17,6 +15,7 @@ bitflags = "1.3"
 fdt = "0.1"
 spin = "0.9"
 goblin = { version = "0.4", default-features = false, features = ["elf64"] }
+qemu-exit = "3.0"
 
 [dev-dependencies]
 
