and here is gagelen with the hal
add interrupts and valid tests with hal

remove code not needed anymore

all warnings gone

a way to dump panic info from the hal (esr etc... for aarch64)

hal: riscv64 support

more uneeded stuff removed

the hal made quite some stuff obsolete

Use const value for PHYSICAL_TIMER_LINE

Co-authored-by: Esteban Blanc <estblcsk@gmail.com>

hal_aarch64: remove dead code in pgt48

Co-authored-by: Esteban Blanc <estblcsk@gmail.com>

cargo fmting the whole gagelen

hal_*: refactor init_paging

Implementations for riscv64 and aarch64 were doing the same thing (and
other archs will probably do the same).
I still kept the global variables (each named GPT) in the arch-specific
hals because I'm not a fan of storage a global inside hal core.

fix(typo): s/reguler/regular

Co-authored-by: Esteban Blanc <estblcsk@gmail.com>

fix(typo): uppercase riscv name

Co-authored-by: Esteban Blanc <estblcsk@gmail.com>

aarch64,riscv64: move _start functions to the hals

cargo fmt'ed post rebase with main

cargo clippy the hal*

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,8 +2,9 @@
 
 members = [
     "kernel",
-    "drivers",
-    "utils",
+    "hal_core",
+    "hal_aarch64",
+    "hal_riscv64",
     "aarch64_qemuvirt",
     "riscv64_qemuvirt",
     "tests",
