--- a/hal_aarch64/Cargo.toml
+++ b/hal_aarch64/Cargo.toml
@@ -1,11 +1,11 @@
 [package]
-name = "aarch64_qemuvirt"
+name = "hal_aarch64"
 version = "0.1.0"
 edition = "2021"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-kernel = { path = "../kernel", features = ["aarch64_pgt48oa"] }
-cortex-a = "8.1"
-tock-registers = "0.7.0"
+hal_core = { path = "../hal_core" }
+tock-registers = "0.7.x"
+cortex-a = "7.4.0"
