--- a/hal_core/Cargo.toml
+++ b/hal_core/Cargo.toml
@@ -1,11 +1,9 @@
 [package]
-name = "drivers"
+name = "hal_core"
 version = "0.1.0"
 edition = "2021"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-utils = { path = "../utils" }
-qemu-exit = "3.0"
-tock-registers = "0.8"
+bitflags = "1.3"
