--- a/hal_riscv64/Cargo.toml
+++ b/hal_riscv64/Cargo.toml
@@ -1,11 +1,12 @@
 [package]
-name = "aarch64_qemuvirt"
+name = "hal_riscv64"
 version = "0.1.0"
 edition = "2021"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-kernel = { path = "../kernel", features = ["aarch64_pgt48oa"] }
-cortex-a = "8.1"
-tock-registers = "0.7.0"
+hal_core = { path = "../hal_core" }
+modular-bitfield = "0.11"
+sbi = "0.2.0"
+riscv = "0.8.0"
