tests: Add test binary in riscv64 and aarch64
Signed-off-by: Esteban Blanc <estblcsk@gmail.com>

--- a/aarch64_qemuvirt/Cargo.toml
+++ b/aarch64_qemuvirt/Cargo.toml
@@ -7,5 +7,7 @@ edition = "2021"
 
 [dependencies]
 kernel = { path = "../kernel", features = ["aarch64_pgt48oa"] }
+tests = { path = "../tests", artifact = "bin" }
+align-data = "0.1.0"
 
 cortex-a = "7.4.0"
