--- a/kernel/Cargo.toml
+++ b/kernel/Cargo.toml
@@ -10,10 +10,10 @@ edition = "2021"
 utils = { path = "../utils" }
 drivers = { path = "../drivers" }
 cfg-if = "1.0"
-static_assertions = "1.1.0"
-once_cell = { version = "1.17.0", default-features = false }
+static_assertions = "1.1"
+once_cell = { version = "1.17", default-features = false }
 modular-bitfield = "0.11"
-bitflags = "1.3"
+bitflags = "2.1"
 fdt = "0.1"
 spin = "0.9"
 goblin = { version = "0.6", default-features = false, features = ["elf64"] }
@@ -21,17 +21,12 @@ goblin = { version = "0.6", default-features = false, features = ["elf64"] }
 [dev-dependencies]
 
 [target.riscv64gc-unknown-none-elf.dependencies]
-sbi = "0.2.0"
-riscv = "0.8.0"
-
-
-[target.thumbv7em-none-eabihf.dependencies]
-cortex-m = "0.7"
-cortex-m-rt = { version = "0.7", default-features = false }
+sbi = "0.2"
+riscv = "0.10"
 
 [target.aarch64-unknown-none.dependencies]
-tock-registers = "0.7.x"
-cortex-a = "7.4.0"
+tock-registers = "0.8"
+cortex-a = "8.1"
 
 [profile.dev]
 panic = "abort"
@@ -41,7 +36,5 @@ panic = "abort"
 
 [features]
 aarch64_pgt48oa = []
-
 riscv64_sv39 = []
-
 arm = []
