--- a/kernel/Cargo.toml
+++ b/kernel/Cargo.toml
@@ -16,6 +16,9 @@ fdt = "0.1"
 spin = "0.9"
 goblin = { version = "0.4", default-features = false, features = ["elf64"] }
 qemu-exit = "3.0"
+hal_core = { path = "../hal_core" }
+hal_aarch64 = { path = "../hal_aarch64" }
+staticvec = { version = "0.11.9", default-features = false }
 
 [dev-dependencies]
 
