misc: Rename project to Gagelen
Signed-off-by: Esteban Blanc <estblcsk@gmail.com>

--- a/aarch64_qemuvirt/Cargo.toml
+++ b/aarch64_qemuvirt/Cargo.toml
@@ -1,12 +1,10 @@
 [package]
 name = "aarch64_qemuvirt"
-version = "0.1.0"
+version = "0.0.1"
 edition = "2021"
 
-# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
-
 [dependencies]
-kernel = { path = "../kernel", features = ["aarch64_pgt48oa"] }
+gagelen = { path = "../kernel", features = ["aarch64_pgt48oa"] }
 tests = { path = "../tests", artifact = "bin" }
 align-data = "0.1"
 cortex-a = "8.1"
