--- a/kernel/Cargo.toml
+++ b/kernel/Cargo.toml
@@ -1,10 +1,8 @@
 [package]
-name = "kernel"
-version = "0.1.0"
+name = "gagelen"
+version = "0.0.1"
 authors = ["cohenarthur <arthur.cohen@epita.fr>", "Esteban \"Skallwar\" Blanc <estblcsk@gmail.com>", "Martin \"n1tram1\" Schmidt <martin.schmidt@epita.fr>"]
 edition = "2021"
-
-# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
 utils = { path = "../utils" }
