misc: Swap staticvec with arrayvec
Staticvec is not compiling with latest nightly. As we do not really
need "static" vectors but just some kind of vectors, let's just use
arrayvec which initialize static size vectors on the stack. A bonus side
effect is that this vectors will reside on the stack instead of some
segment and thus be released after the address space is mapped.

Signed-off-by: Esteban Blanc <estblcsk@gmail.com>

--- a/kernel/Cargo.toml
+++ b/kernel/Cargo.toml
@@ -17,7 +17,7 @@ spin = "0.9"
 goblin = { version = "0.6", default-features = false, features = ["elf64"] }
 qemu-exit = "3.0"
 hal_core = { path = "../hal_core" }
-staticvec = { version = "0.11.9", default-features = false }
+arrayvec = { version = "0.7", default-features = false }
 tests = { path = "../tests", artifact = "bin" }
 align-data = "0.1"
 
