refac(console): reduce globals scope
Rest of the code was interacting directly with globals.
Now there are hidden behind setters. And no need for getters since only
kernel_console.rs needs to get them.

--- a/kernel/Cargo.toml
+++ b/kernel/Cargo.toml
@@ -20,6 +20,7 @@ hal_core = { path = "../hal_core" }
 arrayvec = { version = "0.7", default-features = false }
 tests = { path = "../tests", artifact = "bin" }
 align-data = "0.1"
+delog = "0.1.6"
 
 [dev-dependencies]
 
