--- a/kernel/Cargo.toml
+++ b/kernel/Cargo.toml
@@ -20,7 +20,7 @@ hal_core = { path = "../hal_core" }
 arrayvec = { version = "0.7", default-features = false }
 tests = { path = "../tests", artifact = "bin" }
 align-data = "0.1"
-delog = "0.1.6"
+log = "0.4"
 
 [dev-dependencies]
 
