add feature to compile for launching tests
Previously we were always launching the in-kernel tests.
Add a feature gates so that you don't launch tests by default.

For example, run the tests on aarch64 with the folliwng:
```
cd aarch64_qemuvirt; cargo run -F launch_tests
```

Additionaly, with this we can compile the tests to run on embedded
platforms easily.

--- a/riscv64_qemuvirt/Cargo.toml
+++ b/riscv64_qemuvirt/Cargo.toml
@@ -9,3 +9,6 @@ edition = "2021"
 kernel = { path = "../kernel", features = ["riscv64_sv39"] }
 align-data = "0.1.0"
 log = "0.4"
+
+[features]
+launch_tests = []
