--- a/aarch64_qemuvirt/Cargo.toml
+++ b/aarch64_qemuvirt/Cargo.toml
@@ -10,3 +10,6 @@ kernel = { path = "../kernel", features = ["aarch64_pgt48oa"] }
 cortex-a = "8.1"
 tock-registers = "0.7.0"
 log = "0.4"
+
+[features]
+launch_tests = []
