--- a/tests/tests_bin/Cargo.toml
+++ b/tests/tests_bin/Cargo.toml
@@ -1,14 +1,14 @@
 [package]
-name = "tests"
+name = "tests_bin"
 version = "0.1.0"
 edition = "2021"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
-[[bin]]
-name = "tests_bin"
-
-[[bin]]
-name = "test_userland_exit"
-
 [dependencies]
+
+[profile.dev]
+panic = "abort"
+
+[profile.release]
+panic = "abort"
