--- a/.github/workflows/format.yml
+++ b/.github/workflows/format.yml
@@ -13,11 +13,9 @@ jobs:
     steps:
       - uses: actions/checkout@v2
 
-      - uses: actions-rs/toolchain@v1
-        with:
-            toolchain: nightly
-            components: rustfmt
-            override: true
+      - uses: cachix/install-nix-action@v27
 
       - name: Format
-        run: cargo fmt -- --check
+        run: nix develop --command sh -c "
+          cargo fmt -- --check
+          "
